<resources>
    <string name="app_name">MedGift</string>
    <string name="welcomeTitle">Welcome to MedGift</string>
    <string name="application_logo">Application Logo</string>
    <string name="lblEmail">Email</string>
    <string name="lblPassword">Password</string>
    <string name="lblLoginBtn">Login</string>
    <string name="lblSignup">Sign up</string>
    <string name="txtNoAccount">Don\'t have an account?</string>
    <string name="registerTitle">Hello! Register to get started</string>
    <string name="lblFullname">Full name</string>
    <string name="lblConfirmPassword">Confirm password</string>
    <string name="txtHasAccount">Already have an account?</string>
    <string name="lblLogin">Login</string>
    <string name="rdlblGifter">I am a gifter</string>
    <string name="rdlblProvider">I am a Healthcare service provider</string>
    <string name="lblRegisterBtn">Register</string>
    <string name="notification">Notification</string>
    <string name="more_health_tips"><![CDATA[More health tips >]]></string>
    <string name="health_tips">Health Tips</string>
    <string name="for_you">For you</string>
    <string name="group_gifts">Group gifts</string>
    <string name="gift_care">Gift care</string>
    <string name="service_categories">Service categories</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="about_us">About us</string>
    <string name="logout">Log out</string>
    <string name="available_services">Available Services</string>
    <string name="recipients">Recipients</string>
    <string name="gift">Gift</string>
    <string name="sample_title">Title</string>
    <string name="sample_provider">Provider</string>
    <string name="sample_location">Location</string>
    <string name="sample_description">Description</string>
    <string name="sample_rating_count">1,944</string>
    <string name="sample_price">$ xxx.xx</string>
    <string name="get_started">Get Started</string>
    <string name="service_name">Service name</string>
    <string name="service_assignee">Service assignee</string>
    <string name="hospital">Hospital</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="select_type">Select type</string>
    <string name="title">Title</string>
    <string name="publish_now">Publish now</string>
    <string-array name="spinner_categories">
        <item>Select Type</item>
        <item>Virtual</item>
        <item>In Person</item>
        <item>Remote</item>
    </string-array>

    <string name="lblLoading">Just a second...</string>
    <string name="addRecipientTitle">Create recipient</string>
    <string name="btnAddRecipient">+ Add recipient</string>
    <string name="editRecipientTitle">Edit recipient</string>
    <string name="lblFirstName">First name</string>
    <string name="lblLastName">Last name</string>
    <string name="lblDOB">Date of birth</string>
    <string name="lblPhone">Phone</string>
    <string name="rdlblFemale">Female</string>
    <string name="rdlblMale">Male</string>
    <string name="lblAddress">Address</string>
    <string name="lblSaveBtn">Save</string>
    <string name="recipientTitle">Recipients</string>
    <string name="healthTipTitle">Health tips</string>
    <string name="giftTitle">Gifts</string>
    <string name="btnDeleteHint">Delete button</string>
    <string name="lblCancelBtn">Cancel</string>
    <string name="hintFirstName">First name</string>
    <string name="hintLastName">Last name</string>
    <string name="addHealthtipTitle">Add health tip</string>
    <string name="editHealthtipTitle">Edit health tip</string>
    <string name="btnSendGiftToRecipient">Send gift</string>
    <string name="btnReadTip">Read</string>
    <string name="btnEditTip">Edit</string>
    <string name="channel_name">MedGift channel</string>
    <string name="channel_description">MedGift notification channel</string>

    <string name="btnAddGift">+ Add gift</string>
    <string name="editGiftTitle">Edit gift</string>
    <string name="addGiftTitle">Add gift</string>
    <string name="hintGroup">This is a group gift</string>
    <string name="service_type">Service type</string>

    <string name="editServiceTitle">Edit service</string>
    <string name="createServiceTitle">Create service</string>
    <string-array name="service_types">
        <item>Virtual</item>
        <item>In Person</item>
        <item>Remote</item>
    </string-array>
    <string-array name="availability_days">
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
        <item>SUN</item>
    </string-array>
    <string name="no_image_selected">No image selected</string>
    <string name="change_image">Change image</string>
    <string name="failed_to_load_image_error">Failed to load image. Please try again.</string>
    <string name="add_service">+ Add service</string>
    <string name="myServicesTitle">My services</string>
    <string name="availability">Select delivery day:</string>
    <string name="add_image">Add image</string>
    <string name="rating"><![CDATA[<rating>]]></string>
    <string name="delete">Delete</string>
    <string name="checkout">Checkout</string>
    <string name="add_to_gift">Add service to gift</string>
    <string name="type">Type:</string>
    <string name="provider">Provider:</string>
    <string name="about_service">About service:</string>
    <string name="send_this_gift_to">Gift is meant for: </string>
    <string name="enter_recipient_s_email_address">Recipient</string>
    <string name="your_message">Your message</string>
    <string name="total_before_tax">Total before tax:</string>
    <string name="estimated_gst_hst">Estimated tax:</string>
    <string name="order_total">Order total</string>
    <string name="confirm_now">Confirm Now</string>
    <string name="service_type2">Service type:</string>
    <string name="user_with_email_not_found">User with the provided email not found!</string>
    <string name="user_successfull_added">User was successfully added.</string>
    <string name="inviteesLbl">Invitees:</string>
    <string name="contributorsLbl">Contributors</string>
    <string name="invite_contributorsLbl">Invite contributors</string>
    <string name="recipient">Recipient</string>
    <string name="btnAddHealthtip">+ Add health tip</string>
    <string name="provide_a_valid_email">Please provide a valid email that is not yours.</string>
    <string name="btn_manage_gift">Manage gift</string>
    <string name="btn_add_services">+ Add services</string>
    <string name="itemtxt">Service:</string>
    <string name="recieverEmailTytl">Recipient:</string>
    <string name="totalbeforeTaxTitle">Total before tax:</string>
    <string name="estimatedTax">Estimated tax:</string>
    <string name="dollar">$ </string>
    <string name="orderTotalTitle">Order total</string>
    <string name="PaymentMethodTitle">Payment method</string>
    <string name="CardHolderName">Cardholder name</string>
    <string name="CardNumber">Card number</string>
    <string name="ExpireDate">Expire date</string>
    <string name="CVV">CVV</string>
    <string name="payNow">Pay now</string>
    <string name="goTohome">Go to home</string>
    <string name="ThankYou">Thank you!</string>
    <string name="payment">Your payment has been successfully processed.</string>
    <string name="confirmation">A confirmation email has been sent to your email address.</string>
    <string name="hint_day">Day</string>
    <string name="hint_start_time">Start time</string>
    <string name="hint_end_time">End time</string>
    <string name="availabilityTitle">Availability</string>
    <string name="btnAddAvailability">Add availability</string>
    <string name="btnEditHint">Edit button</string>
    <string name="addDayTimeTitle">Add availability</string>
    <string name="editDayTimeTitle">Edit availability</string>
    <string name="delivery_time">Select a delivery time</string>
    <string name="confirmSelect">Confirm selection</string>
    <string name="serviceDetails">Service details</string>
    <string name="checkoutTitle">Checkout</string>
    <string name="paymentDetail">Payment details</string>
    <string name="lblSchedule">Delivery time</string>
    <string name="lblRecipientAddress">Recipient address</string>
    <string name="gifterName">Gifter</string>
    <string name="lblStatus">Service status</string>
    <string name="lblContribute">Contribute now</string>
    <string name="lblGiftOwner">Gift owner</string>
    <string name="view_details">View details</string>
    <string name="invitationDetails">Invite details</string>
    <string name="featured_services">Featured Services</string>
    <string name="medgift">MEDGIFT</string>
    <string name="care_in_click_nhealth_in_every_gift">Care in Click, \nHealth in Every Gift.</string>
    <string name="thank_you">Thank you!</string>
    <string name="your_payment_has_been_successfully_processed">Your payment has been successfully processed.</string>
    <string name="a_confirmation_email_has_been_sent_to_both_your_email_address_and_the_recipient_s_email">A confirmation email has been sent to both your email address and the recipient\'s email.</string>
    <string name="go_to_home">Go to Home</string>
    <string name="at_medgift_we_believe_in_the_power_of_thoughtful_giving_to_support_the_health_and_well_being_of_your_loved_ones_our_platform_allows_you_to_easily_gift_personalized_healthcare_services_ensuring_that_those_you_care_about_receive_the_attention_and_care_they_deserve_whether_it_s_for_a_routine_checkup_or_a_specialized_treatment_medgift_simplifies_the_process_of_contributing_towards_health_services_creating_a_lasting_impact_with_every_gift">At MedGift, we believe in the power of thoughtful giving to support the health and well-being of your loved ones. Our platform allows you to easily gift personalized healthcare services, ensuring that those you care about receive the attention and care they deserve. Whether it\'s for a routine checkup or a specialized treatment, MedGift simplifies the process of contributing towards health services, creating a lasting impact with every gift.</string>
    <string name="website">Website:</string>
    <string name="www_medgift_com">www.medgift.com</string>
    <string name="email">Email:</string>
    <string name="info_medgift_com">info@medgift.com</string>
    <string name="_1_xxx_xxx_xxxx">+1 xxx-xxx-xxxx</string>
    <string name="hot_line">Hot-line:</string>
    <string name="user_not_a_gifter">Sorry, this user is not a gifter. Gifter is needed.</string>
    <string name="tap_me_for_details">Tap me for details</string>


</resources>