<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".views.LogInActivity">

    <LinearLayout
        style="@style/Pane"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"

        android:orientation="vertical">

        <TextView
            android:id="@+id/signupHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/welcomeTitle"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="30dp"
            android:contentDescription="@string/application_logo"
            android:src="@drawable/applogo_g" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="vertical"
            android:paddingVertical="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lytEmail"
                style="@style/TextLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/lblEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    style="@style/TextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lytPassword"
                style="@style/TextLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/lblPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    style="@style/TextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/rounded_button_blue"
                android:text="@string/lblLoginBtn"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/txtNoAccount"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnSignup"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/lblSignup" />

    </LinearLayout>

</LinearLayout>
