<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Pane"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/signupHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/appTitle"
        android:textAlignment="center"
        android:textColor="@color/title"
        android:textSize="25sp"
        android:textStyle="bold" />
    <ImageView
        android:layout_marginVertical="30dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/application_logo"
        android:src="@drawable/applogo_g"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:paddingVertical="0dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytEmail"
            style="@style/TextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                style="@style/TextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytPassword"
            style="@style/TextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                style="@style/TextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:text="@string/lblLoginBtn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNoAccount"
                android:layout_marginEnd="5dp"
                />
            <TextView
                android:id="@+id/btnSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextButton"
                android:clickable="true"
                android:text="@string/lblSignup" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>