<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/Page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    tools:context=".views.gifter.ConfirmPaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/homeAppBar"
            layout="@layout/homeappbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/confirmpayment_card"
                android:orientation="vertical"
                android:paddingHorizontal="40dp"
                android:paddingVertical="30dp">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    app:srcCompat="@drawable/ic_confirmation" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/thank_you"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_payment_has_been_successfully_processed"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:text="@string/a_confirmation_email_has_been_sent_to_both_your_email_address_and_the_recipient_s_email"
                    android:textColor="@color/gray_2" />

                <Button
                    android:id="@+id/btnGoHome"
                    style="@style/PrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/go_to_home" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>